--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <div class="font-sans text-4xl text-teal-400">
+        <div class="font-sans text-4xl text-red-400">
             “A friend is someone who knows all about you and still loves you.”
             <span class="block">― Elbert Hubbard</span> 
         </div>    
