--- a/index.html
+++ b/index.html
@@ -11,13 +11,60 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="index.css">
     </head>
-    <body>
+    <body class="flex flex-col min-h-screen  bg-primary">
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <div class="font-sans text-4xl text-red-400">
-            “A friend is someone who knows all about you and still loves you.”
-            <span class="block">― Elbert Hubbard</span> 
-        </div>    
+        <header class="w-full py-12 border-t-4 border-highlight ">
+            <div class="container mx-auto w-1/3">
+                <div class="h-full flex items-center">
+                  <img alt="my picture" 
+                    class="w-24 h-24 object-cover object-center flex-shrink-0 rounded-full mr-4 border-2 border-highlight"
+                    src="./src/img/my_photo.png">
+                  <div class="flex-grow">
+                    <h2 class="text-secondary text-4xl font-semibold">Hey there, I'm Walter.</h2>
+                    <p class="text-gray-600 text-highlight text-sm uppercase ">HOME · ABOUT · RESUME</p>
+                  </div>
+                </div>
+              </div>
+        </header>
+        <main class="flex-grow container mx-auto w-1/3">
+            <div class="flex justify-center flex-col">
+                <h2 class="py-1 text-2xl leading-8 font-medium text-secondary ">
+                    I'm a <span class="text-highlight">full-stack developer</span>
+                    that builds elegant and functional web applications with a clean and intuitive user interface.
+                </h2>
+                <p class="py-3 text-xl">
+                    I love Javascript and awesome design. I am a big fan of 
+                    <a href="https://nestjs.com/" class="text-highlight underline">Nestjs</a>,
+                    <a href="https://reactjs.org/" class="text-highlight underline">React</a>, 
+                    <a href="https://www.typescriptlang.org/" class="text-highlight underline">Typescript</a> &
+                    <a href="https://tailwindcss.com/" class="text-highlight underline">TailwindCSS</a>. 
+                </p>                    
+                <p class="py-3 text-xl">
+                    I've been coding professionally right around the time Instagram was launched, and Apple introduced the iPad.
+                </p> 
+                <p class="py-3 text-xl">
+                    You can learn more <a href="#" class="text-highlight underline">about me</a>
+                    or perhaps read <a href="#" class="text-highlight underline">articles</a>.
+                </p>
+            </div>
+        </main>
+        <footer class="w-full pb-40 border-t-4 border-highlight bg-secondary text-primary">
+            <div class="container mx-auto w-1/3 flex justify-around">
+                <a href="https://github.com/waltercj" class="flex items-center md:justify-start justify-center pt-4">
+                    <svg class="w-12 h-12 rounded-full" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 32 32"><path fill-rule="evenodd" d="M 16 4 C 9.371094 4 4 9.371094 4 16 C 4 21.300781 7.4375 25.800781 12.207031 27.386719 C 12.808594 27.496094 13.027344 27.128906 13.027344 26.808594 C 13.027344 26.523438 13.015625 25.769531 13.011719 24.769531 C 9.671875 25.492188 8.96875 23.160156 8.96875 23.160156 C 8.421875 21.773438 7.636719 21.402344 7.636719 21.402344 C 6.546875 20.660156 7.71875 20.675781 7.71875 20.675781 C 8.921875 20.761719 9.554688 21.910156 9.554688 21.910156 C 10.625 23.746094 12.363281 23.214844 13.046875 22.910156 C 13.15625 22.132813 13.46875 21.605469 13.808594 21.304688 C 11.144531 21.003906 8.34375 19.972656 8.34375 15.375 C 8.34375 14.0625 8.8125 12.992188 9.578125 12.152344 C 9.457031 11.851563 9.042969 10.628906 9.695313 8.976563 C 9.695313 8.976563 10.703125 8.65625 12.996094 10.207031 C 13.953125 9.941406 14.980469 9.808594 16 9.804688 C 17.019531 9.808594 18.046875 9.941406 19.003906 10.207031 C 21.296875 8.65625 22.300781 8.976563 22.300781 8.976563 C 22.957031 10.628906 22.546875 11.851563 22.421875 12.152344 C 23.191406 12.992188 23.652344 14.0625 23.652344 15.375 C 23.652344 19.984375 20.847656 20.996094 18.175781 21.296875 C 18.605469 21.664063 18.988281 22.398438 18.988281 23.515625 C 18.988281 25.121094 18.976563 26.414063 18.976563 26.808594 C 18.976563 27.128906 19.191406 27.503906 19.800781 27.386719 C 24.566406 25.796875 28 21.300781 28 16 C 28 9.371094 22.628906 4 16 4 Z"/></svg>
+                    <span class="ml-3 text-xl">GitHub</span>
+                </a>
+                <a href="https://github.com/waltercj" class="flex items-center md:justify-start justify-center pt-4">
+                    <svg class="w-12 h-12 rounded-full" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 32 32"><path d="M 28 8.558594 C 27.117188 8.949219 26.167969 9.214844 25.171875 9.332031 C 26.1875 8.722656 26.96875 7.757813 27.335938 6.609375 C 26.386719 7.171875 25.332031 7.582031 24.210938 7.804688 C 23.3125 6.847656 22.03125 6.246094 20.617188 6.246094 C 17.898438 6.246094 15.691406 8.453125 15.691406 11.171875 C 15.691406 11.558594 15.734375 11.933594 15.820313 12.292969 C 11.726563 12.089844 8.097656 10.128906 5.671875 7.148438 C 5.246094 7.875 5.003906 8.722656 5.003906 9.625 C 5.003906 11.332031 5.871094 12.839844 7.195313 13.722656 C 6.386719 13.695313 5.628906 13.476563 4.964844 13.105469 C 4.964844 13.128906 4.964844 13.148438 4.964844 13.167969 C 4.964844 15.554688 6.660156 17.546875 8.914063 17.996094 C 8.5 18.109375 8.066406 18.171875 7.617188 18.171875 C 7.300781 18.171875 6.988281 18.140625 6.691406 18.082031 C 7.316406 20.039063 9.136719 21.460938 11.289063 21.503906 C 9.605469 22.824219 7.480469 23.609375 5.175781 23.609375 C 4.777344 23.609375 4.386719 23.585938 4 23.539063 C 6.179688 24.9375 8.765625 25.753906 11.546875 25.753906 C 20.605469 25.753906 25.558594 18.25 25.558594 11.742188 C 25.558594 11.53125 25.550781 11.316406 25.542969 11.105469 C 26.503906 10.410156 27.339844 9.542969 28 8.558594 Z"/></svg>
+                    <span class="ml-3 text-xl">Twitter</span>
+                </a>
+                <a href="https://github.com/waltercj" class="flex items-center md:justify-start justify-center pt-4">
+                    <svg class="w-12 h-12 rounded-full" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 32 32"><path d="M 3 8 L 3 26 L 29 26 L 29 8 Z M 7.3125 10 L 24.6875 10 L 16 15.78125 Z M 5 10.875 L 15.4375 17.84375 L 16 18.1875 L 16.5625 17.84375 L 27 10.875 L 27 24 L 5 24 Z"/></svg>
+                    <span class="ml-3 text-xl">me@walter.com</span>
+                </a>
+            </div>
+        </footer>  
     </body>
 </html>
