fix: page width

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <![endif]-->
     <header class="w-full py-12 border-t-4 border-highlight">
       <div
-        class="mx-auto sm:flex sm:items-center sm:justify-center w-full md:w-3/4"
+        class="mx-auto flex items-center justify-center w-full sm:w-11/12 md:w-3/4 lg:w-1/2 xl:w-2/5"
       >
         <div class="h-full flex items-center">
           <img
@@ -46,7 +46,7 @@
       </div>
     </header>
     <main
-      class="flex-grow container mx-auto w-full sm:w-11/12 md:w-3/4 xl:w-3/5 text-white"
+      class="flex-grow container mx-auto w-full sm:w-11/12 md:w-3/4 lg:w-1/2 xl:w-2/5 text-white"
     >
       <div class="flex flex-col text-lg sm:text-xl mx-2">
         <h2 class="py-1 md:py-2 text-xl sm:text-2xl leading-8 font-medium">
@@ -87,7 +87,7 @@
       class="w-full pb-40 border-t-4 border-highlight bg-secondary text-white text-base sm:text-xl"
     >
       <div
-        class="mx-auto w-full md:w-3/4 flex flex-col sm:flex-row sm:justify-around"
+        class="mx-auto w-full sm:w-11/12 md:w-3/4 lg:w-1/2 xl:w-2/5 flex flex-col sm:flex-row sm:justify-around"
       >
         <a
           href="https://github.com/waltercj"
