fix: replace underline

--- a/index.html
+++ b/index.html
@@ -56,19 +56,19 @@
         </h2>
         <p class="py-5">
           I love Javascript and awesome design. I am a big fan of
-          <a href="https://nestjs.com/" class="text-highlight underline"
+          <a href="https://nestjs.com/" class="text-highlight borderMarker"
             >Nestjs</a
           >,
-          <a href="https://reactjs.org/" class="text-highlight underline"
+          <a href="https://reactjs.org/" class="text-highlight borderMarker"
             >React</a
           >,
           <a
             href="https://www.typescriptlang.org/"
-            class="text-highlight underline"
+            class="text-highlight borderMarker"
             >Typescript</a
           >
           &
-          <a href="https://tailwindcss.com/" class="text-highlight underline"
+          <a href="https://tailwindcss.com/" class="text-highlight borderMarker"
             >TailwindCSS</a
           >.
         </p>
@@ -78,8 +78,8 @@
         </p>
         <p class="py-3">
           You can learn more
-          <a href="#" class="text-highlight underline">about me</a> or perhaps
-          read <a href="#" class="text-highlight underline">articles</a>.
+          <a href="#" class="text-highlight borderMarker">about me</a> or perhaps
+          read <a href="#" class="text-highlight borderMarker">articles</a>.
         </p>
       </div>
     </main>
