--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="h-full flex items-center">
           <img
             alt="my picture"
-            class="w-24 h-24 object-cover object-center flex-shrink-0 rounded-full mr-4 border-2 border-highlight"
+            class="w-24 h-24 object-cover object-center flex-shrink-0 rounded-full mr-4 border-2 border-highlight border-shadow"
             src="./src/img/my_photo.png"
           />
           <div class="flex-grow">
@@ -78,8 +78,9 @@
         </p>
         <p class="py-3">
           You can learn more
-          <a href="#" class="text-highlight borderMarker">about me</a> or perhaps
-          read <a href="#" class="text-highlight borderMarker">articles</a>.
+          <a href="#" class="text-highlight borderMarker">about me</a> or
+          perhaps read
+          <a href="#" class="text-highlight borderMarker">articles</a>.
         </p>
       </div>
     </main>
